--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.3</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,6 +51,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
         <!--MyBatis分页插件-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -113,11 +111,20 @@
             <scope>test</scope>
         </dependency>
 
-        <!--redis-->
+        <!-- https://mvnrepository.com/artifact/com.tairitsu/cache -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>2.6.7</version>
+            <groupId>com.tairitsu</groupId>
+            <artifactId>ignotus-cache</artifactId>
+            <version>1.0.26</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tairitsu</groupId>
+            <artifactId>ignotus-foundation</artifactId>
+            <version>1.0.26</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-redis</artifactId>
         </dependency>
     </dependencies>
 
