--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     multipart:
       max-file-size: 30MB
   datasource:
-    url: jdbc:mysql://[::1]:3306/OnlineChat?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://[::1]:3306/OnlineChat?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     username: root
     password: 123456
   mvc:
@@ -20,18 +20,13 @@ spring:
     password: # Redis 服务器密码，默认为空。生产中，一定要设置 Redis 密码！
     database: 0 # Redis 数据库号，默认为 0 。
     timeout: 30000 # Redis 连接超时时间，单位：毫秒。
-mybatis:
-  mapper-locations:
-    - classpath:mapper/*.xml
-    - classpath*:com/**/mapper/*.xml
-  type-aliases-package: cn.sonui.onlinechat.model
-
 server:
   port: 80
 
 config:
   name: OnlineChat
   version: 1.0.0
+  salt: ejz!6SJUZpP3@UUZnXqUDppYPQLzzUm4hWpKCdnLb!*#vrjGa!rmqBN$^AqTVDi9
 
 springfox:
   documentation:
