--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.6.7</version>
         </dependency>
-
+        <!-- MinIO 客户端 -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
